--- a/frontend/app/views/fragments/form/submit.scala.html
+++ b/frontend/app/views/fragments/form/submit.scala.html
@@ -1,11 +1,12 @@
 @(ctaText: String)
+@import views.support.Asset
 
 <fieldset class="fieldset">
     <div class="fieldset__heading"></div>
     <div class="fieldset__fields">
         <div class="actions js-waiting-container">
             <button type="submit" class="submit-input action--logged-in js-submit-input">@ctaText</button>
-            <div class="i-wait"><img src="@routes.Assets.at("images/wait.gif")" alt=""/></div>
+            <div class="i-wait"><img src="@Asset.at("images/wait.gif")" alt=""/></div>
         </div>
     </div>
 </fieldset>
