--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -1,5 +1,7 @@
 @(title: String)(content: Html)
 
+@import views.support.Asset
+
 <!DOCTYPE html>
 
 <html class="js-off js-not-modern">
@@ -35,8 +37,8 @@
         <title>@(Config.siteTitle + " - " + title)</title>
         @fragments.javaScriptFirstSteps()
 
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/style.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
+        <link rel="stylesheet" media="screen" href="@Asset.at("stylesheets/style.css")">
+        <link rel="shortcut icon" type="image/png" href="@Asset.at("images/favicon.ico")">
 
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
