change header link text

--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -61,10 +61,10 @@
                     </li>
                     @if(!Config.membershipHide) {
                         <li class="inline-list__item nav__item">
-                            <a href="/join" class="nav__link">become a member</a>
+                            <a href="/join" class="nav__link">about membership</a>
                         </li>
                         <li class="inline-list__item nav__item">
-                            <a href="/join/patron" class="nav__link">become a patron</a>
+                            <a href="/join/patron" class="nav__link">patrons</a>
                         </li>
                     }
                 </ul>
