Enforce the mini-tier-chooser for ticket buyers if they're not a SI member

--- a/frontend/common/app/assets/stylesheets/style.scss
+++ b/frontend/common/app/assets/stylesheets/style.scss
@@ -16,6 +16,7 @@
 @import 'pages/events';
 @import 'pages/joiner';
 @import 'pages/tier';
+@import 'pages/tickets';
 /* ==========================================================================
    Webfonts pages
    ========================================================================== */
