--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -1,6 +1,4 @@
-@(tier: com.gu.membership.salesforce.Tier.Tier, amount: Int)
-
-@import views.support.Format._
+@(tier: com.gu.membership.salesforce.Tier.Tier)
 
 @main("Payment | " + tier) {
 
@@ -12,14 +10,14 @@
 
         @fragments.form.errorMessageDisplay()
         @fragments.form.nameDetail()
-        @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress")
-        @fragments.form.cardDetail()
-        @fragments.form.billingAddressCTA()
-        @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress")
+        @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", true)
         @fragments.form.paymentOptions(tier)
+        @fragments.form.billingAddressCTA()
+        @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", false)
+        @fragments.form.cardDetail()
         @fragments.form.submit("Join now")
     </form>
 
-    @fragments.joiner.payment.aside(tier, amount)
+    @fragments.joiner.payment.aside(tier)
 
 }
