Add various platform (fav)icons and update template to match

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -36,7 +36,16 @@
         @fragments.javaScriptFirstSteps()
 
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/style.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
+
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicons/32x32.ico")">
+        <link rel="apple-touch-icon" sizes="152x152" href="@routes.Assets.at("images/favicons/152x152.png")">
+        <link rel="apple-touch-icon" sizes="144x144" href="@routes.Assets.at("images/favicons/144x144.png")">
+        <link rel="apple-touch-icon" sizes="120x120" href="@routes.Assets.at("images/favicons/120x120.png")">
+        <link rel="apple-touch-icon" sizes="114x114" href="@routes.Assets.at("images/favicons/114x114.png")">
+        <link rel="apple-touch-icon" sizes="72x72" href="@routes.Assets.at("images/favicons/72x72.png")">
+        <link rel="apple-touch-icon-precomposed" href="@routes.Assets.at("images/favicons/57x57.png")">
+        <meta name="msapplication-TileColor" content="#214583">
+        <meta name="msapplication-TileImage" content="@routes.Assets.at("images/favicons/windows_tile_144_b.png")">
 
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
