--- a/frontend/common/app/assets/stylesheets/_vars.scss
+++ b/frontend/common/app/assets/stylesheets/_vars.scss
@@ -23,9 +23,7 @@ $inArticleInlineImgWidth: 114px;
 $trailblockImgWidth: 100%;
 $trailblockImgWidthLarge: 140px;
 $mobilePopupOffset: 55px;
-$headerHeight: 112px;
-$headerMargin: 130px;
-$pageImageIndent: 290px;
+$headerMargin: 48px;
 
 // Guss defaults overrides
 // =============================================================================
@@ -211,6 +209,7 @@ $mem-brandBlue: #82c2d6;
 $mem-brandGrey: #dcddda;
 $mem-trans-white: rgba(255, 255, 255, .8);
 $mem-black: #333333;
+$mem-blue: rgba(2, 199, 225, 1);
 
 $mem-button-confirm: #1a4683;
 $mem-button-cancel: #b8b8b8;
@@ -222,3 +221,4 @@ $offWhite: #d6d6d6;
 $black: #000000;
 $black-trans: rgba(0, 0, 0, .5);
 $white-trans: rgba(255, 255, 255, .5);
+
