--- a/frontend/common/app/assets/stylesheets/nav/_nav.scss
+++ b/frontend/common/app/assets/stylesheets/nav/_nav.scss
@@ -51,7 +51,7 @@
     }
     .nav__link {
         position: relative;
-        color: $offWhite;
+        color: #000000;
         display: block;
         @include rem((
             margin: 0 26px 0 0,
