--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -14,9 +14,9 @@
         around the world. Join us today as a friend, partner or patron.</p>
 
         <ul class="tier-list u-unstyled">
-            <li><a href="@routes.Joiner.joinFriend" class="action action--join">Become a Friend</a></li>
-            <li><a href="@routes.Joiner.paymentPartner" class="action action--join">Become a Partner</a></li>
-            <li><a href="@routes.Joiner.patron">Become a Patron</a></li>
+            <li><a href="@routes.Joiner.enterDetails("friend")" class="action action--join">Become a Friend</a></li>
+            <li><a href="@routes.Joiner.enterDetails("partner")" class="action action--join">Become a Partner</a></li>
+            <li><a href="@routes.Joiner.enterDetails("patron")">Become a Patron</a></li>
         </ul>
 
         <h2>Guardian Live events</h2>
