scsslint is complaining here, bah

--- a/frontend/assets/stylesheets/base/_type.scss
+++ b/frontend/assets/stylesheets/base/_type.scss
@@ -14,7 +14,7 @@ html {
 
     // For IE11 to do the math properly
     // See http://bit.ly/1g4X0bX — thanks @7studio and @dawitti
-    // font-size: calc(1em * .625);
+    font-size: calc(1em * .625);
 }
 
 body {
