--- a/frontend/app/views/fragments/tickets/ticketsFunnel.scala.html
+++ b/frontend/app/views/fragments/tickets/ticketsFunnel.scala.html
@@ -1,25 +1,29 @@
-@(Step: Int)
+@(  Step: Int,
+    StepOne: String = "Choose membership",
+    StepTwo: String = "Sign into Guardian account",
+    StepThree: String = "Welcome pack / Billing",
+    StepFour: String = "Confirm membership")
 
 <div class="funnel">
-    <ul>
-        <li class="funnel__step @if(Step == 1){active}">
+    <ul class="u-unstyled l-row l-row--items-4">
+        <li class="funnel__step l-row__item @if(Step == 1){active}">
             <span class="funnel__point"></span>
-            <span class="funnel__text">Choose</span>
+            <span class="funnel__text">@StepOne</span>
         </li>
-        <li class="funnel__sep"></li>
-        <li class="funnel__step @if(Step == 2){active}">
+        @*<li class="funnel__sep"></li>*@
+        <li class="funnel__step l-row__item @if(Step == 2){active}">
             <span class="funnel__point"></span>
-            <span class="funnel__text">Sign in</span>
+            <span class="funnel__text">@StepTwo</span>
         </li>
-        <li class="funnel__sep"></li>
-        <li class="funnel__step @if(Step == 3){active}">
+        @*<li class="funnel__sep"></li>*@
+        <li class="funnel__step l-row__item @if(Step == 3){active}">
             <span class="funnel__point"></span>
-            <span class="funnel__text">Pay</span>
+            <span class="funnel__text">@StepThree</span>
         </li>
-        <li class="funnel__sep"></li>
-        <li class="funnel__step @if(Step == 4){active}">
+        @*<li class="funnel__sep"></li>*@
+        <li class="funnel__step l-row__item @if(Step == 4){active}">
             <span class="funnel__point"></span>
-            <span class="funnel__text">Done</span>
+            <span class="funnel__text">@StepFour</span>
         </li>
     </ul>
 </div>
