--- a/frontend/common/app/assets/stylesheets/layout/_headings.scss
+++ b/frontend/common/app/assets/stylesheets/layout/_headings.scss
@@ -17,6 +17,10 @@
 .section-sub-headline {
     @extend %section-header;
     @include fs-headline(4);
+
+    padding-top: $gs-baseline/2;
+    border-top: 1px solid $c-neutral3;
+    margin-bottom: $gs-baseline*2;
 }
 
 .section-body-headline {
