--- a/frontend/common/app/assets/stylesheets/layout/_layout.scss
+++ b/frontend/common/app/assets/stylesheets/layout/_layout.scss
@@ -49,7 +49,7 @@ body {
     ));
     @include mq(tablet) {
         @include rem((
-            padding: 0 $gs-gutter*4
+            padding: 0 $gs-gutter*4 $gs-gutter*8
         ));
     }
 }
@@ -67,4 +67,27 @@ body {
     @include rem((
         padding-bottom: $gs-gutter * 2
     ));
+}
+
+// Two thirds section
+
+.section-two-thirds {
+
+    section.thirds {
+        overflow: hidden;
+        display: inline-block;
+        vertical-align: top;
+    }
+
+    section.two-thirds {
+        width: 66.7%;
+        padding-right: $gs-gutter*2;
+        border-right: 1px solid $c-neutral3;
+    }
+
+    section.one-third {
+        width: 33.3%;
+        padding-left: $gs-gutter*2;
+    }
+
 }
