--- a/frontend/common/app/assets/stylesheets/pages/_tickets.scss
+++ b/frontend/common/app/assets/stylesheets/pages/_tickets.scss
@@ -1,16 +1,10 @@
-
-.tickets-choose {
-    width: 540px;
-    margin: 0 auto;
-}
-
 .tickets-select-form {
     label {
         position: relative;
         display: block;
         width: 100%;
-        border: 1px solid $c-neutral4;
-        @include border-radius(6px);
+        border-top: 1px solid $c-neutral4;
+        background-color: $c-neutral7;
         padding: $gs-baseline $gs-gutter $gs-baseline $gs-gutter*2;
         margin: 0 0 $gs-baseline;
 
@@ -27,15 +21,12 @@
 
         .tickets-select-form__tier-name {
             margin-bottom: $gs-baseline;
+            padding-bottom: $gs-baseline;
+            border-bottom: 1px solid $c-neutral4;
         }
 
         .tickets-select-form__price {
             @include fs-bodyHeading(4);
-            text-align: right;
-            width: 100px;
-            position: absolute;
-            top: $gs-baseline;
-            right: $gs-gutter;
         }
 
         input:checked + .tickets-select-form__tier-name {
@@ -68,62 +59,86 @@
 
 
 
-/* funnel -------------------------------------------------------------------------- */
+/* funnel ------------------------------------------------------------------------ */
 
 .funnel {
     width: 100%;
+    height: 72px;
     text-align: center;
     cursor: default;
+    position: relative;
+    margin-top: $gs-baseline*4;
+    margin-bottom: $gs-baseline*4;
+
     > ul {
-        display: inline-block;
-        height: 60px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 16px;
+        width: 100%;
+        background-color: $c-neutral6;
+        @include border-radius(50px);
+
+        -webkit-box-pack: justify;
+        -moz-box-pack: justify;
+        -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+
         > li {
-            display: inline-block;
-            vertical-align: middle;
+            flex-grow: 0;
+            flex-basis: 16px;
+            flex-direction: column;
+
+            display: flex;
+            justify-content: center; /* align horizontal */
+            align-items: center;
         }
     }
 
     .funnel__step {
+        display: block;
         height: 20px;
         width: 16px;
+        position: relative;
 
         .funnel__point {
-            content: ' ';
+            display: block;
             width: 16px;
             height: 16px;
             @include border-radius(50px);
-            background-color: $c-neutral4;
-            display: block;
-            position: relative;
-            top: 1px;
-            left: 50%;
-            margin-left: -8px;
+            background-color: #ffffff;
+            border: 2px solid $c-neutral4;
         }
 
         &.active .funnel__point {
-            background-color: $mem-brandOrange;
-            @include box-shadow(
-                0 0 0 1px #ffffff,
-                0 0 0 2px $c-brandLightBlue
-            );
+            background-color: $mem-blue;
+            border-color: $mem-blue;
         }
 
         .funnel__text {
             display: block;
             text-align: center;
-            width: 60px;
-            position: relative;
+            width: 106px;
+            position: absolute;
             left: 50%;
-            margin: -30px;
-            top: 40px;
+            margin-left: -53px;
+            top: -($gs-baseline*4);
             @include fs-textsans(2);
         }
-    }
 
-    .funnel__sep {
-        height: 1px;
-        width: 200px;
-        background-color: $c-neutral4;
-        text-align: center;
+        &:first-child .funnel__text {
+            text-align: left;
+            left: 0;
+            margin: 0;
+        }
+
+        &:last-child .funnel__text {
+            text-align: right;
+            left: auto;
+            right: 0;
+            margin: 0;
+        }
     }
 }
