--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -1,7 +1,9 @@
 @()
 
 @main("Help") {
-    <h1>Help</h1>
+
+    @fragments.layout.sectionHeader("Help")
+
     <ul>
         <li>What is Guardian membership?</li>
 
