--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -3,7 +3,8 @@
 @main("Join | Patron") {
 
     <section class="content-section">
-        <h1 class="section-headline u-text-hyphenate">Purpose/Value</h1>
+
+        @fragments.layout.sectionHeader("Purpose/Value")
 
         <div class="action-inline-combo">
             <h2 class="section-sub-headline u-text-hyphenate">Patron &#163;60</h2>
