--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -3,9 +3,9 @@
 @main("Thankyou | Friend") {
 
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border">
-        <h1 class="section-headline u-text-hyphenate">Thank You</h1>
-        <p>Nam eu purus eros. Sed tortor lectus, bibendum nec est et, interdum tristique magna. Aliquam erat volutpat. Curabitur faucibus a sem quis porttitor. Suspendisse semper dui libero, eu convallis sem pharetra nec.
-        </p>
+        @fragments.layout.sectionHeader("Thank You")
+
+        @fragments.tickets.ticketsFunnel(4)
     </section>
 
     <section class="align-center">
