--- a/frontend/app/views/tier/upgrade/upgradeForm.scala.html
+++ b/frontend/app/views/tier/upgrade/upgradeForm.scala.html
@@ -2,7 +2,7 @@
 
 @main("Upgrade Payment") {
 
-    <h1 class="section-headline">Payment</h1>
+    @fragments.layout.sectionHeader("Payment")
 
     <form action="" method="POST" id="payment-form" class="form form-primary-container js-stripe-form" data-change-to-tier="@targetTier">
 
