--- a/frontend/app/views/joiner/thankyou/partner.scala.html
+++ b/frontend/app/views/joiner/thankyou/partner.scala.html
@@ -1,4 +1,8 @@
-@(paymentDetails: model.Stripe.PaymentDetails)
+@(
+    paymentDetails: model.Stripe.PaymentDetails,
+    eventOpt: Option[model.Eventbrite.EBEvent],
+    discountCodeOpt: Option[model.Eventbrite.EBDiscount]
+    )
 
 @import views.support.Dates._
 
@@ -17,6 +21,14 @@
     <section class="align-center">
         <a class="action action--inline-text action--join action--wide" href="/events">Get Started</a>
     </section>
+
+    @for(
+        event <- eventOpt
+    ) {
+
+        <iframe src="https://www.eventbrite.com/tickets-external?eid=@event.id&ref=etckt&v=2&discount=@discountCodeOpt.getOrElse(model.Eventbrite.EBDiscount("", 0, 0)).code" frameborder="0" height="340" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
+
+    }
 
     <div class="separator"></div>
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border" id="whats-included">
