--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -1,4 +1,4 @@
-@()
+@(ebIframeUrlOpt: Option[String])
 
 @main("Thankyou | Friend") {
 
@@ -11,6 +11,15 @@
     <section class="align-center">
         <a class="action action--inline-text action--join action--wide" href="/events">Get Started</a>
     </section>
+
+    @for(
+        ebIframeUrl <- ebIframeUrlOpt
+    ) {
+
+        <iframe src="@ebIframeUrl" frameborder="0" height="340" width="100%" vspace="0" hspace="0" marginheight="5"
+        marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
+
+    }
 
     <div class="separator"></div>
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border" id="whats-included">
