make the cancel pages slightly less awful

--- a/frontend/app/views/fragments/layout/sectionHeader.scala.html
+++ b/frontend/app/views/fragments/layout/sectionHeader.scala.html
@@ -1,4 +1,4 @@
 @(headline: String)
 <header class="section__heading u-cf">
-    <h1 class="section-headline">@headline</h1>
+    <h1 class="section-headline">@Html(headline)</h1>
 </header>
