Fix the bug that started it all: a dodgy path reference in our CSS

--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -178,7 +178,7 @@ div.event {
 }
 
 .icon {
-    background-image: url('../images/icons.png');
+    background-image: url('/assets/images/icons.png');
     width: 34px;
     height: 33px;
     display: inline-block;
