fixing wills code as per

--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -70,28 +70,28 @@
                 <div class="form-field">
                     <p>What is the main reason you are leaving Guardian Membership?</p>
                     <select name="leavingReason">
-                        <option>Please select</option>option>
-                        <option>Too many emails</option>option>
-                        <option>Too expensive</option>option>
-                        <option>Going on holiday</option>option>
-                        <option>No events in my area</option>option>
-                        <option>Other</option>option>
+                        <option>Please select</option>
+                        <option>Too many emails</option>
+                        <option>Too expensive</option>
+                        <option>Going on holiday</option>
+                        <option>No events in my area</option>
+                        <option>Other</option>
                     </select>
                 </div>
                 <div class="form-field">
                     <p>How likely is it that you would recommend Guardian Membership to a friend?</p>
                     <select name="recommend">
-                        <option>Please select</option>option>
-                        <option>1</option>option>
-                        <option>2</option>option>
-                        <option>3</option>option>
-                        <option>4</option>option>
-                        <option>5</option>option>
-                        <option>6</option>option>
-                        <option>7</option>option>
-                        <option>8</option>option>
-                        <option>9</option>option>
-                        <option>10</option>option>
+                        <option>Please select</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                        <option>6</option>
+                        <option>7</option>
+                        <option>8</option>
+                        <option>9</option>
+                        <option>10</option>
                     </select>
                 </div>
                 <button class="action-cta action-cta--confirm action-cta--full-width-mobile">Cancel membership account</button>
