--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -295,34 +295,40 @@ div.event {
     @include border-radius(20px);
     color: #0096c9;
     background-color: #ffffff;
-    padding: 2px 8px;
+    @include rem((
+        padding: 3px 8px,
+        border: 1px solid #0096c9
+    ));
     vertical-align: middle;
-    border: 1px solid #0096c9;
     cursor: pointer;
 }
 
 .tooltip__detail {
     position: absolute;
-    min-width: 200px;
     display: block;
-    bottom: 41px;
-    left: -22px;
     background-color: #ffffff;
-    z-index: 1000;
-    padding: 20px;
+    @include rem((
+        min-width: 200px,
+        bottom: 32px,
+        left: -27px,
+        z-index: 1000,
+        padding: 20px
+    ));
     @include border-radius(10px);
 }
 
 .tooltip__stem {
     border-color: #ffffff transparent transparent;
     border-style: solid;
-    border-width: 15px;
     position: absolute;
-    left: 22px;
-    bottom: -30px;
+    @include rem((
+        border-width: 15px,
+        left: 22px,
+        bottom: -30px
+    ));
     height: 0;
     width: 0;
-    z-index: -1;
+    z-index: 1;
     font-size: 0;
     line-height: 0;
 }
