Bit of cleanup for default card CSS

--- a/frontend/app/views/fragments/form/cardDetail.scala.html
+++ b/frontend/app/views/fragments/form/cardDetail.scala.html
@@ -15,7 +15,7 @@
             <label class="label" for="cc-num">Card Number
                 <div class="input credit-card-container">
                     <i class="js-credit-card-image credit-card icon-sprite icon-sprite-card-unknown"></i>
-                    <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input"
+                    <input type="tel" size="20" data-stripe="number" class="js-credit-card-number credit-card-input text-input"
                            id="cc-num"
                            placeholder="0000 0000 0000 0000"
                            maxlength="19"
